Set FixedRotation flag on new inline text annotations

BUG: 313177
FIXED-IN: 4.11.0